package at.fhtw.swen.mctg.model;

import services.trade.Requirement;

import java.util.Collection;

//macht anfrage zu server hier???
public class Store {
    Collection<Card> store;

    public addOffer(Card card, Requirement requirement){};
    public deleteCard();
}

